<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CadastroActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#fd4e02">
                <ImageView
                    android:layout_width="250dp"
                    android:layout_marginStart="40dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_logo_toolbar">

                </ImageView>
                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_logout"

                    ></ImageView>





            </androidx.appcompat.widget.Toolbar>

            <EditText
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="Nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="Data de nascimento"
                android:inputType="date" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="E-mail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"


                android:hint="Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"

                android:hint="Telefone"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"

                android:text="Gênero:"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBoxMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"

                android:text="Masculino" />

            <CheckBox
                android:id="@+id/checkBoxFeminino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"

                android:text="Feminino" />

            <CheckBox
                android:id="@+id/checkBoxNDA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"

                android:text="@string/prefiro_nao_declarar" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"

                android:text="@string/profissional"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/area_de_especializacao"

                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/crm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/numero_de_registro"
                android:inputType="number" />

            <EditText
                android:id="@+id/especializacao1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"

                android:hint="@string/especializacao_primaria"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/especializacao2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"

                android:hint="@string/especializacao_secundaria"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fd4e02"
                android:fontFamily="@font/montserrat"
                android:text="@string/selecionar_foto_da_galeria"

                android:textAllCaps="false" />

            <ImageView
                android:id="@+id/IVPreviewImage"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextsinopseserie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_cadastrarimagem"
                app:layout_constraintVertical_bias="1.0"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_Salvar"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:backgroundTint="#fd4e02"
                android:fontFamily="@font/montserrat"
                android:text="@string/finalizar_cadastro_e_salvar" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>